k8s/manifest/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: application

spec:
  replicas: 3

  selector:
    matchLabels:
      name: app

  template:
    metadata:
      labels:
        name: app

    spec:
      containers:
        - name: con1
          image: sw1236/springboot-kubernetes-project:88
