k8s/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      city: pune
  template:
    metadata:
      name: mycon
      labels:
        city: pune
    spec:
      containers:
        - name: con1
          image: sw1236/springboot-kubernetes-project:42
