k8s/manifest/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqlpod
  namespace: application

spec:
  serviceName: mysql-service
  replicas: 1

  selector:
    matchLabels:
      name: mysqlpod

  template:
    metadata:
      labels:
        name: mysqlpod

    spec:
      containers:
        - name: mycon
          image: mysql:8

          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "200m"
              memory: "1000Mi"

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysqlpvc
