k8s/manifest/Servicemonitoring.yaml

apiVersion: v1
kind: Service
metadata:
  name: application-service
  namespace: application
  labels:
    app: monitoring
spec:
  selector:
    app: application
  ports:
    - name: http
      port: 8080
      targetPort: 8080
