k8s/manifest/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsvc
  namespace: application
  labels:
    app: application
spec:
  type: NodePort
  selector:
    name: app
  ports:
    - name: http
      port: 90
      targetPort: 8080
      nodePort: 30002
