k8s/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: serv
  namespace: dev
spec:
  selector:
    app: test
  ports:
    - port: 50
      targetPort: 8080
